# astro-learn

./: .gitignore  CLAUDE.md
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/agents/: __init__.py
backend/agents/astronomy/: catalog_agent.py  catalog_chat_agent.py  data_analyst_agent.py  fits_analyst_agent.py  fits_analyst_services.py  fits_decision.py  image_processor_agent.py  reflexion_data_analyst_agent.py
backend/agents/base/: __init__.py  agent_message.py  agent_registry.py  agent_state.py  base_agent.py
backend/agents/notebook/: _citations.py  flashcard_agent.py  qa_agent.py  quiz_agent.py  summarizer_agent.py
backend/agents/orchestrator/: orchestrator_agent.py  router.py  task_planner.py
backend/agents/support/: retriever_agent.py  validator_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 250c6c556f46_artefact_persistence_documents_fits_.py  3c8a2d9e1f47_add_share_token_to_notebooks.py  4d1e8b3a6c19_add_share_settings_to_notebooks.py  7521436aa891_initial_schema.py  a4f9c2e8b71d_add_header_summary_to_fits_files.py  a5e29c1d83f4_drop_legacy_feature_sessions.py  b18f3d7c2a9e_add_interpretation_to_analyses.py  bf6297faaa8b_add_progress_columns_to_agent_runs.py  c4d72ef39e1b_add_content_hash_to_fits_files.py  d3c64a8b91e5_add_token_usage_events.py  e7a13c4f9b22_add_mode_and_session_fits_files.py  e9f31b7d4c08_add_is_admin_to_users.py  f8b24d9c1a36_add_notebook_artifacts.py  fc27006e2ca2_add_catalog_cache_table.py
backend/api/v1/: router.py
backend/configs/: litellm.yaml
backend/core/: agent_factory.py  config.py  db.py  dependencies.py  exceptions.py  logging.py  redis_client.py  sample_fits.py  security.py  storage.py  usage_context.py
backend/core/llm/: llm_client.py  llm_router.py  pricing.py  prompt_templates.py  validators.py
backend/memory/long_term/: catalog_cache.py  qdrant_backend.py  vector_store.py
backend/memory/short_term/: conversation_memory.py
backend/models/: __init__.py  agent_model.py  analysis_model.py  base_model.py  catalog_cache_model.py  document_model.py  fits_file_model.py  message_model.py  notebook_artifact_model.py  notebook_model.py  report_model.py  session_model.py  token_usage_event_model.py  user_model.py
backend/repositories/: agent_repository.py  analysis_repository.py  base_repository.py  catalog_cache_repository.py  document_repository.py  fits_file_repository.py  message_repository.py  notebook_artifact_repository.py  notebook_repository.py  report_repository.py  session_repository.py  token_usage_repository.py  user_repository.py
backend/schemas/: admin_schema.py  agent_schema.py  astronomy_schema.py  fits_interpretation_schema.py  notebook_schema.py  session_schema.py  stats_schema.py  token_usage_schema.py  user_schema.py
backend/scripts/: backfill_header_summary.py  bench_llm_fast_alias.py  promote_admin.py  seed_demo.py  seed_sample_fits.py  test_orchestrator.py  test_orchestrator_chat.py  test_workflow_fits_upload.py  test_workflow_index_pdf.py
backend/services/: _agent_run_recorder.py  _astronomy_gate.py  admin_service.py  agent_service.py  astronomy_service.py  catalog_commentary.py  notebook_service.py  session_service.py  token_usage_service.py  user_service.py  user_stats_service.py
backend/tests/: conftest.py  test_astronomy_gate.py  test_router_rules.py
backend/tests/routes/: test_admin_routes.py  test_agent_routes.py  test_astronomy_routes.py  test_global_exception_handler.py  test_notebook_routes.py  test_session_routes.py  (+3 more)
backend/tools/: base_tool.py
backend/workers/: _deps.py  astronomy_worker.py  celery_app.py  notebook_worker.py
backend/workflows/: astronomy_workflow.py  base_workflow.py  learning_workflow.py  notebook_workflow.py  workflow_engine.py
(+162 files in other folders)
