[project]
name = "astrolearn-backend"
version = "0.1.0"
description = "Multi-agent astronomy & learning backend (FastAPI + hand-written agents + LiteLLM)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AstroLearn" }]

dependencies = [
    # --- Web framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",          # multipart/form-data for file uploads

    # --- Config & validation ---
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",            # required by pydantic.EmailStr

    # --- LLM gateway (single source of truth — see core/llm/llm_client.py) ---
    "litellm>=1.52.0",

    # --- Database (async SQLAlchemy + Postgres + migrations) ---
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # --- Cache / session / message broker ---
    "redis[hiredis]>=5.2.0",

    # --- Background tasks ---
    "celery>=5.4.0",

    # --- Vector store ---
    "qdrant-client>=1.12.0",

    # --- Astronomy ---
    "astropy>=6.1.0",
    "astroquery>=0.4.7",
    "numpy>=1.26.0",
    "matplotlib>=3.8",                   # FITS thumbnail rendering (workers/astronomy_worker)
    "photutils>=1.13",                   # Source detection (DAOStarFinder)

    # --- Auth ---
    "python-jose[cryptography]>=3.3.0",  # JWT
    "bcrypt>=4.0.0",                     # password hashing (used directly, not via passlib)

    # --- Document parsing ---
    "pypdf>=5.1.0",
    "markdown>=3.6",                     # Report rendering (HTML output)
    "weasyprint>=62.0",                  # Report rendering (PDF output)

    # --- HTTP client (used by tools wrapping external APIs) ---
    "httpx>=0.28.0",

    # --- Logging ---
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",                     # AsyncClient for FastAPI tests
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "api",
    "agents",
    "tools",
    "workflows",
    "services",
    "memory",
    "repositories",
    "models",
    "schemas",
    "workers",
]

# --- Tooling config ---

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]                        # line length handled by formatter

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Query/File/Body/Depends/Form are idiomatic in argument defaults.
extend-immutable-calls = [
    "fastapi.Query",
    "fastapi.File",
    "fastapi.Body",
    "fastapi.Depends",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Cookie",
]

[tool.ruff.lint.per-file-ignores]
# Test names sometimes use uppercase for emphasis (e.g. NOT_persisted).
"tests/**" = ["N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# All tests share one event loop. Without this, Windows' ProactorEventLoop
# crashes during teardown when asyncpg tries to send a ROLLBACK after the
# loop has been torn down.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: hits real external services (Simbad, NASA, web search). Skipped by default; run with `pytest -m live`.",
]
# Skip live-marked tests by default. Override with `pytest -m live` or
# `pytest -m 'live or not live'` to include them.
addopts = "-m 'not live'"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
